--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,26 @@
 body{
     background-color: red
 }
+
+.bonkimg{
+    height: 0
+}
+
+.bonkbig{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition-delay: 1s;
+}
+
+.btn{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 5px;
+    background-color: rgb(214, 164, 0);
+}
